Customize landing page

--- a/feedback.html
+++ b/feedback.html
@@ -38,19 +38,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-9 mx-auto">
-            <h1 class="mb-5">Invista em sua carreria e saia na frente!</h1>
-          </div>
-          <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-            <form action='feedback.html'>
-              <div class="form-row">
-                <div class="col-12 col-md-9 mb-2 mb-md-0">
-                  <input type="email" class="form-control form-control-lg" placeholder="Informe o seu email...">
-                </div>
-                <div class="col-12 col-md-3">
-                  <button type="submit" class="btn btn-block btn-lg btn-primary">Participar!</button>
-                </div>
-              </div>
-            </form>
+            <h2 class="mb-5">Obrigado! Em breve entraremos em contato.</h2>
           </div>
         </div>
       </div>
