--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
     <!-- Custom styles for this template -->
     <link href="css/landing-page.css" rel="stylesheet">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111033770-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-111033770-1');
+
+        function myClicks() {
+            gtag('event', 'turbine', {});
+            console.log('uia');
+        }
+
+    </script>
+
   </head>
 
   <body>
@@ -40,14 +56,17 @@
           <div class="col-xl-9 mx-auto">
             <h1 class="mb-5">Invista em sua carreria e saia na frente!</h1>
           </div>
+          <div class="col-xl-9 mx-auto">
+            <h3 class="mb-5">Receba o mapeamento de seu perfil e de suas oportunidades ao fornecer seus dados de carreira.</h3>
+          </div>
           <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
             <form action='feedback.html'>
               <div class="form-row">
-                <div class="col-12 col-md-9 mb-2 mb-md-0">
+                <div class="col-12 col-md-8 mb-2 mb-md-0">
                   <input type="email" class="form-control form-control-lg" placeholder="Informe o seu email...">
                 </div>
-                <div class="col-12 col-md-3">
-                  <button type="submit" class="btn btn-block btn-lg btn-primary">Participar!</button>
+                <div class="col-12 col-md-4">
+                  <button type="submit" onclick='myClicks()' class="btn btn-block btn-lg btn-primary">Turbine sua carreira!</button>
                 </div>
               </div>
             </form>
