Point tests to the application

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                   <input type="email" class="form-control form-control-lg" placeholder="Informe o seu email...">
                 </div>
                 <div class="col-12 col-md-4">
-                  <button type="submit" onclick='myClicks()' class="btn btn-block btn-lg btn-primary">Turbine sua carreira!</button>
+                  <button type="submit" id="btn-subscribe" onclick='myClicks()' class="btn btn-block btn-lg btn-primary">Turbine sua carreira!</button>
                 </div>
               </div>
             </form>
