--- a/feedback.html
+++ b/feedback.html
@@ -38,7 +38,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-9 mx-auto">
-            <h2 class="mb-5">Obrigado! Em breve entraremos em contato.</h2>
+            <h2 class="mb-5" id="feedback">Obrigado! Em breve entraremos em contato.</h2>
           </div>
         </div>
       </div>
