--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
           </div>
         </div>
       </div>
+
     </header>
 
     <!-- Footer -->
@@ -119,6 +120,11 @@
             </ul>
           </div>
         </div>
+            <br>
+            <div class="col-l-3 mx-auto">
+                <h3 class="mb-5">Made with <i class="fa fa-heart" aria-hidden="true"></i>
+                    using IBM Watson</h3>
+            </div>
       </div>
     </footer>
 
